k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paauth-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
  - hosts:
    - AUTH_DOMAIN_VALUE
    secretName: paauth-tls
  rules:
  - host: AUTH_DOMAIN_VALUE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paauth
            port:
              number: 80
